Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93429

QtQuick3D fails to compile targeting WebAssembly part 2

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.2.0 Alpha
    • 6.2
    • Quick: 3D
    • None
    • WebAssembly
    • 5ab5ed37ff62871e64678da0062e06e8a3ac6c51 (qt/qtquick3d/dev)

    Description

      Change https://codereview.qt-project.org/c/qt/qt5/+/336695/25
      Job https://testresults.qt.io/coin/integration/qt/qt5/tasks/1620038768
      Log https://testresults.qt.io/coin/logview/qt/qtquick3d/004a52a09d1e34d27c2283cfff77f93e21b0ccf0/LinuxopenSUSE_15_2x86_64LinuxWebAssemblyx86_64GCCqtci-linux-openSUSE-15.2-x86_64-50-988ba5DisableTests_Sccache/ed0f404a93de2043a2088fa633cc76f068ce8b4e/build_1620042309

      Excerpt

       ../../src/plugins/assetimporters/assimp/assimpimporter_rt.cpp:363:103: error: non-constant-expression cannot be narrowed from type 'ai_uint32' (aka 'unsigned int') to 'qsizetype' (aka 'int') in initializer list [-Wc++11-narrowing]
                       const auto it = textureMap.constFind(TextureEntry{QByteArrayView{texturePath.C_Str(), texturePath.length}, texInfo});
                                                                                                             ^~~~~~~~~~~~~~~~~~
       ../../src/plugins/assetimporters/assimp/assimpimporter_rt.cpp:363:103: note: insert an explicit cast to silence this issue
                       const auto it = textureMap.constFind(TextureEntry{QByteArrayView{texturePath.C_Str(), texturePath.length}, texInfo});
                                                                                                             ^~~~~~~~~~~~~~~~~~
                                                                                                             static_cast( )
       ../../src/plugins/assetimporters/assimp/assimpimporter_rt.cpp:1018:29: warning: comparison of integers of different signs: 'qsizetype' (aka 'int') and 'const 
           for (qsizetype i = 0; i != materialCount; ++i)
                                 ~ ^  ~~~~~~~~~~~~~
       ../../src/plugins/assetimporters/assimp/assimpimporter_rt.cpp:1021:29: warning: comparison of integers of different signs: 'qsizetype' (aka 'int') and 'const 
           for (qsizetype i = 0; i != meshCount; ++i)
                                 ~ ^  ~~~~~~~~~
       ../../src/plugins/assetimporters/assimp/assimpimporter_rt.cpp:1024:29: warning: comparison of integers of different signs: 'qsizetype' (aka 'int') and 'const 
           for (qsizetype i = 0; i != embeddedTextureCount; ++i)
                                 ~ ^  ~~~~~~~~~~~~~~~~~~~~
       3 warnings and 1 error generated.
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            stromme Christian
            alexandru.croitor Alexandru Croitor
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes