Fix type narrowing in the runtime asset code

Issue triggered in WebAssembly build due to narrowing in
initialization list from uint to int. This change also fixes related
warnings elsewhere in same source file.

Fixes: QTBUG-93429
Change-Id: I73986504372ff235311a984404b37cbbc07e3fb4
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>